<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/informations_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="cursive"
                android:text="@string/location"
                android:textSize="30sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/location_desc"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="cursive"
                android:text="@string/hours"
                android:textSize="30sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/hours_desc"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="cursive"
                android:text="@string/prices"
                android:textSize="30sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/prices_desc"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="cursive"
                android:text="@string/contacts"
                android:textSize="30sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/contacts_desc"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>